package com.paxtech.utime.platform.services.domain.model.queries;

public record GetServiceByIdQuery(Long Id) {
}
